# memalloc

./: .gitignore  CMakeLists.txt  README.md  main.c  mem.c  mem.h  mem_alloc.c  mem_core.c  mem_gc.c  mem_internal.h  mem_platform.c
.github/workflows/: cmake-multi-platform.yml  msys2.yml
